Add core API resources, models, and config
Scaffold the SmartCampus REST API: introduce project POM. Add domain models (Room, Sensor, SensorReading), in-memory DataStore (moved to storage package), REST resources (Discovery, Room, Sensor, SensorReading) with basic validation .